--- a/camere.html
+++ b/camere.html
@@ -45,7 +45,13 @@
     <div id="about">
     <h2>Benefits:</h2>
   <p>Un'oasi di comfort per il vostro soggiorno. Questa lussuosa suite è splendidamente decorata e offre una serie di vantaggi, tra cui:</p>
-<ul>
+/*
+      |\      _,,,---,,_
+ZZZzz /,`.-'`'    -.  ;-;;,_
+     |,4-  ) )-,_. ,\ (  `'-'
+    '---''(_/--'  `-'\_)  ILCINE
+*/
+      <ul>
         <li>Camera separata</li>
         <li>Comfort extra</li>
         <li>Privacy</li>
